# case-notifier

./: .dockerignore  .env.example  .gitignore  BUILD.bazel  CLAUDE.md  Dockerfile  README.md  WORKSPACE  cloud-run.yaml  cloud_run_deploy_prod.sh  deploy_cloud_run.sh  deploy_dev.sh  deploy_gce.sh  go.mod  go.sum  run.sh  test_imap.go  test_login.go
cmd/tracker/: BUILD.bazel  main.go
internal/config/: BUILD.bazel  config.go
internal/email/: BUILD.bazel  imap.go
internal/notifier/: BUILD.bazel  resend.go
internal/storage/: BUILD.bazel  storage.go
internal/uscis/: BUILD.bazel  auth.go  browser_client.go  client.go  detector.go
