load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")

# gazelle:prefix github.com/phhowardchen/case-tracker
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_binary(
    name = "test_login",
    srcs = ["test_login.go"],
    deps = [
        "@com_github_chromedp_cdproto//network",
        "@com_github_chromedp_chromedp//:chromedp",
    ],
)
