load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "notifier",
    srcs = ["resend.go"],
    importpath = "github.com/phhowardchen/case-tracker/internal/notifier",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_resend_resend_go_v2//:resend-go"],
)

go_test(
    name = "notifier_test",
    srcs = ["resend_test.go"],
    embed = [":notifier"],
)
