load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "uscis",
    srcs = [
        "browser_client.go",
        "client.go",
        "detector.go",
    ],
    importpath = "github.com/phhowardchen/case-tracker/internal/uscis",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_chromedp_chromedp//:chromedp",
    ],
)

go_test(
    name = "uscis_test",
    srcs = ["client_test.go"],
    embed = [":uscis"],
)
